--- a/index.html
+++ b/index.html
@@ -117,6 +117,19 @@
             th, td { -webkit-print-color-adjust: exact; print-color-adjust: exact; }
             .max-score-col { background-color: var(--alrowda-soft-orange) !important; }
             .score-input { border: none !important; }
+            .header-brand {
+        display: flex !important; /* إجبار المتصفح على استخدام الفليكس */
+        flex-direction: row !important; /* التأكد من أن الاتجاه أفقي */
+        justify-content: space-between !important;
+        align-items: center !important;
+        width: 100%;
+    }
+
+    /* لمنع العناصر من التمدد بشكل غريب */
+    .title-text {
+        flex: 1; 
+        text-align: right; /* أو حسب اتجاه لغتك */
+    }
         }
         /* =========================
    Responsive Design Only
@@ -503,3 +516,4 @@
 </script>
 </body>
 </html>
+
