--- a/index.html
+++ b/index.html
@@ -59,28 +59,9 @@
             border-bottom: 3px solid var(--alrowda-orange);
             margin-bottom: 15px; padding-bottom: 10px;
         }
-.header-brand {
-    display: flex;
-    flex-direction: row !important;   /* منع النزول تحت العنوان */
-    align-items: center;
-    justify-content: space-between;
-    flex-wrap: nowrap;                /* منع الالتفاف */
-}
 
-        .title-text h5 { color: var(--alrowda-green); font-weight: 800; margin: 0;  flex: 1;
-    min-width: 0;
-}
-
-.header-brand img {
-    flex-shrink: 0;      /* منع تصغير أو نزول الشعار */
-    max-height: 60px;
-}
-        @media (max-width: 480px) {
-    .header-brand img {
-        max-height: 45px;
-    }
-}
-
+        .title-text h5 { color: var(--alrowda-green); font-weight: 800; margin: 0; }
+        
         /* الجداول والظلال */
         table { 
             width: 100%; 
@@ -331,9 +312,9 @@
     <div class="header-brand d-flex justify-content-between align-items-center">
         <div class="title-text">
             <h5>نموذج تقييم أداء الوظائف التخصصية</h5>
-            <div class="text-center" style="color: var(--alrowda-orange); font-size: 11px; font-weight: 700;">
+            <!-- <div class="text-center" style="color: var(--alrowda-orange); font-size: 11px; font-weight: 700;">
                 Specialized job performance appraisal form
-            </div>
+            </div> -->
         </div>
         <img src="logo.jpeg" alt="Logo" style="height: 60px;">
     </div>
