--- a/index.html
+++ b/index.html
@@ -375,22 +375,32 @@
             </tr>
         </tbody>
     </table>
- <table class="table table-bordered text-center">
-        <thead>
-            <tr>
-                <th width="33%">مصادقة الموظف</th>
-                <th width="33%">المسئول المباشر</th>
-                <th>الموارد البشرية</th>
-            </tr>
-        </thead>
-        <tbody>
-          <tr>
- <td class="sig-cell">التوقيع  :------------------</td>
- <td class="sig-cell">التوقيع   :------------------</td>
- <td class="sig-cell">  التوقيع  :------------------</td>
- </tr>
-        </tbody>
-    </table>
+<table class="table table-bordered text-center">
+    <thead>
+        <tr>
+            <th width="33%">مصادقة الموظف</th>
+            <th width="33%">المسئول المباشر</th>
+            <th>الموارد البشرية</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td class="sig-cell">
+                التوقيع :------------------
+            </td>
+
+            <td class="sig-cell">
+         <span id="managerNameDisplay" style="font-weight:700;"></span><br>
+                التوقيع :------------------
+            </td>
+
+            <td class="sig-cell">
+                التوقيع :------------------
+            </td>
+        </tr>
+    </tbody>
+</table>
+
     <br>
  <div class="text-muted small fw-bold"
          style="position:absolute; bottom:5px; left:10px;">
@@ -409,20 +419,22 @@
 
 <script>
     const SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbzoArAs6pIQ-mOeXkfV9seM8cNS20hBpTl2E5w7BriBO_LTZ23ijxBKeyuIUiji3eg7/exec';
+
     let currentManagerID = "";
+    let currentManagerName = "";
 
     const evalItems = [
        {id: 1,  txt: "مستوى تحقيقه للأهداف المنشودة", max: 4, id2: 11, txt2: "مستوى معرفته بتفاصيل مهام وظيفته", max2: 4},
-    {id: 2,  txt: "درجة الاعتماد عليه وتحمل المسئولية", max: 4, id2: 12, txt2: "مستوى خبرته في أداء مهام وظيفته", max2: 4},
-    {id: 3,  txt: "مستوى تعاونه مع زملائه في العمل", max: 4, id2: 13, txt2: "السرعة في إنجاز الأعمال المكلف بها", max2: 4},
-    {id: 4,  txt: "مستوى تعاونه مع رؤسائه في العمل", max: 4, id2: 14, txt2: "الدقة في أداء الأعمال المكلف بها", max2: 4},
-    {id: 5,  txt: "مستوى تعاونه مع الآخرين", max: 4, id2: 15, txt2: "إمكانية تحمله لمهام ومسؤوليات أعلى", max2: 4},
-    {id: 6,  txt: "البديهة وحسن التصرف", max: 4, id2: 16, txt2: "الحرص على ترتيب وتنظيم ونظافة مكان عمله", max2: 4},
-    {id: 7,  txt: "مدى قدرته على تطوير وابتكار أساليب العمل", max: 4, id2: 17, txt2: "مدى التزامه بأوقات الدوام الرسمي", max2: 4},
-    {id: 8,  txt: "رغبته في التعلم والتطوير الذاتي", max: 4, id2: 18, txt2: "مدى التزامه بمعايير وأخلاقيات العمل", max2: 4},
-    {id: 9,  txt: "مدى احترامه لأنظمة وتعليمات العمل", max: 4, id2: 19, txt2: "مدى اهتمامه بحسن مظهره ونظافته", max2: 4},
-    {id: 10, txt: "العمل بروح الفريق", max: 4, id2: 20, txt2: "المحافظة على أدوات العمل", max2: 4},
-        {id: 11, txt: "التأخير والغياب", max: 10, id2: 22, txt2: "المخالفات الوظيفية", max2: 10},
+       {id: 2,  txt: "درجة الاعتماد عليه وتحمل المسئولية", max: 4, id2: 12, txt2: "مستوى خبرته في أداء مهام وظيفته", max2: 4},
+       {id: 3,  txt: "مستوى تعاونه مع زملائه في العمل", max: 4, id2: 13, txt2: "السرعة في إنجاز الأعمال المكلف بها", max2: 4},
+       {id: 4,  txt: "مستوى تعاونه مع رؤسائه في العمل", max: 4, id2: 14, txt2: "الدقة في أداء الأعمال المكلف بها", max2: 4},
+       {id: 5,  txt: "مستوى تعاونه مع الآخرين", max: 4, id2: 15, txt2: "إمكانية تحمله لمهام ومسؤوليات أعلى", max2: 4},
+       {id: 6,  txt: "البديهة وحسن التصرف", max: 4, id2: 16, txt2: "الحرص على ترتيب وتنظيم ونظافة مكان عمله", max2: 4},
+       {id: 7,  txt: "مدى قدرته على تطوير وابتكار أساليب العمل", max: 4, id2: 17, txt2: "مدى التزامه بأوقات الدوام الرسمي", max2: 4},
+       {id: 8,  txt: "رغبته في التعلم والتطوير الذاتي", max: 4, id2: 18, txt2: "مدى التزامه بمعايير وأخلاقيات العمل", max2: 4},
+       {id: 9,  txt: "مدى احترامه لأنظمة وتعليمات العمل", max: 4, id2: 19, txt2: "مدى اهتمامه بحسن مظهره ونظافته", max2: 4},
+       {id: 10, txt: "العمل بروح الفريق", max: 4, id2: 20, txt2: "المحافظة على أدوات العمل", max2: 4},
+       {id: 11, txt: "التأخير والغياب", max: 10, id2: 22, txt2: "المخالفات الوظيفية", max2: 10},
     ];
 
     const body = document.getElementById('evalBody');
@@ -433,7 +445,7 @@
                 <td class="text-start ps-2">${item.txt}</td>
                 <td class="max-score-col">${item.max}</td>
                 <td><input type="number" class="score-input" oninput="validateInput(this, ${item.max})"></td>
-                <td class="text-white"  style="background-color:#faa619">${item.id2}</td>
+                <td class="text-white" style="background-color:#faa619">${item.id2}</td>
                 <td class="text-start ps-2">${item.txt2}</td>
                 <td class="max-score-col">${item.max2}</td>
                 <td><input type="number" class="score-input" oninput="validateInput(this, ${item.max2})"></td>
@@ -455,31 +467,53 @@
     }
 
     function verifyManager() {
-        const id = document.getElementById('managerIDInput').value;
-        if(!id) return;
-        document.getElementById('loginBtn').innerHTML = '<i class="fas fa-spinner fa-spin"></i>';
-        
-        fetch(`${SCRIPT_URL}?action=checkManager&id=${id}`)
+    const id = document.getElementById('managerIDInput').value;
+    if (!id) return;
+
+    document.getElementById('loginBtn').innerHTML = '<i class="fas fa-spinner fa-spin"></i>';
+
+    fetch(`${SCRIPT_URL}?action=checkManager&id=${id}`)
         .then(res => res.json())
-        .then(isValid => {
-            if (isValid) {
+        .then(data => {
+            if (data.valid) {
+
                 currentManagerID = id;
+                currentManagerName = data.managerName || "";
+
+                // ✅ عرض اسم المدير في خانة التوقيع
+                const display = document.getElementById('managerNameDisplay');
+                if (display) {
+                    display.innerText = currentManagerName;
+                }
+
+                // (اختياري) لو عندك حقل مخفي أو input
+                const nameField = document.getElementById('managerName');
+                if (nameField) {
+                    nameField.value = currentManagerName;
+                }
+
                 document.getElementById('authOverlay').style.display = 'none';
                 document.getElementById('mainContent').style.display = 'flex';
+
             } else {
                 document.getElementById('errorMsg').style.display = 'block';
                 document.getElementById('loginBtn').innerText = 'دخول';
             }
-        }).catch(() => {
+        })
+        .catch(() => {
             currentManagerID = id;
             document.getElementById('authOverlay').style.display = 'none';
             document.getElementById('mainContent').style.display = 'flex';
         });
-    }
+}
+
 
     function submitData() {
         const btn = document.getElementById('sendBtn');
-        if(!document.getElementById('empName').value) { alert("يرجى إدخال اسم الموظف"); return; }
+        if (!document.getElementById('empName').value) {
+            alert("يرجى إدخال اسم الموظف");
+            return;
+        }
 
         btn.innerHTML = '<i class="fas fa-spinner fa-spin"></i> جاري الحفظ...';
         btn.disabled = true;
@@ -489,6 +523,7 @@
 
         const payload = {
             managerID: currentManagerID,
+            managerName: currentManagerName,
             empName: document.getElementById('empName').value,
             empID: document.getElementById('empID').value,
             jobTitle: document.getElementById('jobTitle').value,
@@ -506,7 +541,7 @@
             window.print();
             btn.disabled = false;
             btn.innerHTML = '<i class="fas fa-print me-2"></i> إرسال وحفظ التقييم';
-            // Reset
+
             document.getElementById('empName').value = "";
             document.getElementById('empID').value = "";
             document.querySelectorAll('.score-input').forEach(i => i.value = "");
@@ -515,5 +550,6 @@
         });
     }
 </script>
+
 </body>
 </html>
