--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@ function handleSearch(query) {
     }
 
     function validateInput(input, max) {
-        if (parseFloat(input.value) > max) { alert("القيمة الاعلى 4 " + max); input.value = ""; }
+        if (parseFloat(input.value) > max) { alert("القيمة الاعلى " + max); input.value = ""; }
         sum();
     }
 
@@ -460,4 +460,5 @@ function submitData() {
 </script>
 </body>
 </html>
+
 
