--- a/index.html
+++ b/index.html
@@ -20,48 +20,69 @@
             --card-shadow: 0 4px 20px rgba(0,0,0,0.08);
         }
 
-  
-      @media print {
+  @media print {
 
     @page {
         size: A4;
-        margin: 11mm;
+        margin: 10.5mm; /* توسعة أخيرة محسوبة */
     }
 
-    /* الحاوية – أوسع ومتنفسة */
+    body {
+        font-size: 12px !important;
+        line-height: 1.35 !important;
+    }
+
     .a4-container {
         padding: 9mm !important;
+        min-height: auto !important;
     }
 
-    /* مسافة طبيعية بين الجداول */
+    main {
+        padding: 9px !important;
+        border-width: 3px !important;
+    }
+
     table {
-        margin-bottom: 10px !important; /* وسط بين 8 و 15 */
+        margin-bottom: 9px !important;
         border-collapse: collapse;
     }
 
-    /* خلايا مريحة بدون ترهل */
-    th, td {
-        padding: 7px 9px !important;
-        line-height: 1.45;
+    th {
+        padding: 8px !important;
+        font-size: 12px !important;
     }
 
-    /* الحقول أوضح */
+    td {
+        padding: 7px 8px !important;
+        font-size: 12px !important;
+        line-height: 1.35 !important;
+    }
+
     .form-control,
     textarea {
         padding: 5px 7px !important;
         font-size: 12px !important;
+        line-height: 1.3 !important;
     }
 
-    /* مربعات الدرجات كما هي تقريبًا */
+    textarea {
+        min-height: 65px !important;
+        height: 65px !important;
+    }
+
     .score-input {
         height: 26px !important;
         width: 46px !important;
         font-size: 12px !important;
     }
 
-    /* منع انقسام الصفحة */
-    table, tr {
-        page-break-inside: avoid;
+    .header-brand {
+        margin-bottom: 12px !important;
+        padding-bottom: 10px !important;
+    }
+
+    table, tr, td, th {
+        page-break-inside: avoid !important;
     }
 
     .no-print {
@@ -462,6 +483,7 @@ function submitData() {
 </script>
 </body>
 </html>
+
 
 
 
